--- a/style.css
+++ b/style.css
@@ -527,7 +527,7 @@ footer .hebergement {
   width: 26.3vw;
 }
 
-footer section p {
+footer section h6 {
   font-weight: 750;
   font-size: 1vw;
   margin-bottom: 1vw;
@@ -967,7 +967,7 @@ footer section a:hover {
   footer .hebergement {
     width: 404px;
   }
-  footer section p {
+  footer section h6 {
     font-weight: 750;
     font-size: 18px;
     margin-bottom: 20px;
@@ -1403,7 +1403,7 @@ footer section a:hover {
   footer .hebergement {
     width: 26.3vw;
   }
-  footer section p {
+  footer section h6 {
     font-weight: 750;
     font-size: 1vw;
     margin-bottom: 1vw;
@@ -1898,7 +1898,7 @@ footer section a:hover {
     width: 100%;
     margin-bottom: 10vw;
   }
-  footer section p {
+  footer section h6 {
     font-weight: 750;
     font-size: 4vw;
     margin-bottom: 4vw;
